[metadata]
name = cacher
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
description = function caching
url = https://github.com/quintenroets/cacher
license = MIT

[options]
packages = find:
package_dir =
    = .
install_requires =
    quinten-cli
    superpathlib

[options.entry_points]
console_scripts =
    clearcache = cacher.clearing:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
